--- a/performance.html
+++ b/performance.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
-    <title>Performances</title>
+    <title>Performance</title>
   </head>
   <body>
     <nav>
@@ -48,18 +48,90 @@
       </div>
 
       <div class="parallax-layer parallax-foreground">
-        <main>
-          <h1 class="main-title2 fade-in">Performance</h1>
-          <section class="block-fade-in">
-              <embed
-                src="https://www.youtube.com/embed/ipWcX5ABNS4"
-                wmode="transparent"
-                type="video/mp4"
-                width="100%"
-                height="100%"
-                allow="autoplay; encrypted-media; picture-in-picture"
-                allowfullscreen
-                title="Keyboard Cat"
+        <main id="performance">
+          <h1 class="main-title fade-in">Performance</h1>
+          <section class="block-fade-in video-block">
+            <h1 class="fade-in">Competitioins</h1>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/callin'.png"
+                alt="Callin' thumbnail"
+                name="ipWcX5ABNS4"
+              />
+            </div>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/cactus.png"
+                alt="Cactus thumbnail"
+                name="A74VYaZV6IU"
+              />
+            </div>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/saymyname.png"
+                alt="Cactus thumbnail"
+                name="o4KmuIt2hgc"
+              />
+            </div>
+          </section>
+
+          <section class="block-fade-in video-block">
+            <h1 class="fade-in">Showcases</h1>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/ko.png"
+                alt="K.O. thumbnail"
+                name="4ik-KqVNbjI"
+              />
+            </div>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/clap.png"
+                alt="Clap thumbnail"
+                name="Z87LUHfe7Ow"
+              />
+            </div>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/criticalbeauty.png"
+                alt="Critical Beauty thumbnail"
+                name="DZbd6scqXpk"
+              />
+            </div>
+          </section>
+
+          <section class="block-fade-in video-block">
+            <h1 class="fade-in">Covers</h1>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/numb.png"
+                alt="Num thumbnail"
+                name="7lYsezMMSCU"
+              />
+            </div>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/blackswan.png"
+                alt="Black Swan thumbnail"
+                name="cfAYZVl3Hro"
+              />
+            </div>
+          </section>
+
+          <section class="block-fade-in video-block">
+            <h1 class="fade-in">Collaborations</h1>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/gunshot.png"
+                alt="Gunshot thumbnail"
+                name="n3ojHLer0qM"
+              />
+            </div>
+            <div class="embed-wrapper fade-in">
+              <img
+                src="img/thumnails/micdrop.png"
+                alt="Clap thumbnail"
+                name="OXYtuZCssMo"
               />
             </div>
           </section>
