Finished third page changed the name of the fourth page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html"><h1>Home</h1></a>
         <a href="story.html"><h1>Our Story</h1></a>
         <a href="performance.html"><h1>Performance</h1></a>
-        <a href="contact.html"><h1>Contact Us</h1></a>
+        <a href="findus.html"><h1>Find Us</h1></a>
         <div id="social-media-icons">
           <a href="https://www.instagram.com/toxic.dance">
             <img src="img/icons/instagram.svg" alt="Instagram icon" />
