--- a/performance.html
+++ b/performance.html
@@ -13,7 +13,7 @@
         <a href="index.html"><h1>Home</h1></a>
         <a href="story.html"><h1>Our Story</h1></a>
         <a href="performance.html"><h1>Performance</h1></a>
-        <a href="contact.html"><h1>Contact Us</h1></a>
+        <a href="findus.html"><h1>Find Us</h1></a>
         <div id="social-media-icons">
           <a href="https://www.instagram.com/toxic.dance">
             <img src="img/icons/instagram.svg" alt="Instagram icon" />
@@ -135,7 +135,34 @@
               />
             </div>
           </section>
+
+          <section id="next-page-button">
+            <a href="findus.html">
+              <h1 class="sub-title fade-in">Find Us</h1>
+              <img
+                class="right-arrow sub-title fade-in"
+                src="img/icons/icons8-expand-arrow-100.png"
+                alt="down arrow"
+              />
+            </a>
+          </section>
         </main>
+
+        <footer>
+          <p id="copyright">&copy; Copyright 2021 Daniel Sergilov</p>
+          <p id="icon-credit">
+            Icons made by
+            <a href="https://www.flaticon.com/authors/becris" title="Becris"
+              >Becris</a
+            >
+            and
+            <a href="https://www.freepik.com" title="Freepik">Freepik,</a>
+            from
+            <a href="https://www.flaticon.com/" title="Flaticon"
+              >www.flaticon.com</a
+            >
+          </p>
+        </footer>
       </div>
     </div>
 
