added a credit to the footer

--- a/story.html
+++ b/story.html
@@ -283,7 +283,14 @@
             from
             <a href="https://www.flaticon.com/" title="Flaticon"
               >www.flaticon.com</a
-            >
+            >.
+            <br />
+            Clips from
+            <a
+              href="http://www.youtube.com/fridaychopsticks"
+              title="Friday Chopsticks"
+              >Friday Chopsticks</a
+            >.
           </p>
         </footer>
       </div>
