Finished last page (mobile)

--- a/findus.html
+++ b/findus.html
@@ -48,9 +48,27 @@
       </div>
 
       <div class="parallax-layer parallax-foreground">
-        <section id="form-wrapper">
-          <h1 class="main-title3 fade-in">Drop us an email:</h1>
-          <form id="send-email" class="fade-in">
+        <section class="content-wrapper">
+          <h1 class="main-title3 fade-in">Follow us on Social Media!</h1>
+          <div id="social-media" class="content fade-in">
+            <a href="https://www.instagram.com/toxic.dance">
+              <img src="img/icons/instagram.svg" alt="Instagram icon" />
+            </a>
+            <a href="https://www.youtube.com/ToxicDance">
+              <img src="img/icons/youtube.svg" alt="YouTube icon" />
+            </a>
+            <a href="https://www.tiktok.com/@toxic.dance.bg">
+              <img src="img/icons/tiktok.svg" alt="TikTok icon" />
+            </a>
+            <a href="https://www.facebook.com/ToxicGroupOfficial">
+              <img src="img/icons/facebook.svg" alt="Facebook icon" />
+            </a>
+          </div>
+        </section>
+
+        <section class="content-wrapper">
+          <h1 class="main-title4 fade-in">Drop us an email:</h1>
+          <form id="send-email" class="content fade-in">
             <label for="email" required>Email:</label><br />
             <input
               type="email"
@@ -82,6 +100,10 @@
             <input type="submit" value="Send" />
           </form>
         </section>
+
+        <footer>
+          <p id="copyright">&copy; Copyright 2021 Daniel Sergilov</p>
+        </footer>
       </div>
     </div>
 
