Finished site, code needs more comments

--- a/findus.html
+++ b/findus.html
@@ -73,32 +73,36 @@
           <section class="content-wrapper">
             <h1 class="main-title4 fade-in">Drop us an email:</h1>
             <form id="send-email" class="content fade-in">
-              <label for="email" required>Email:</label><br />
+              <label for="email">Email:</label><br />
               <input
                 type="email"
                 name="email"
                 class="textbox"
                 placeholder="Your Email..."
+                required
               /><br />
-              <label for="name" required>Name:</label><br />
+              <label for="name">Name:</label><br />
               <input
                 type="text"
                 name="name"
                 class="textbox"
-                placeholder="Your Name"
+                placeholder="Your Name..."
+                required
               /><br />
-              <label for="subject" required>Subject:</label><br />
+              <label for="subject">Subject:</label><br />
               <input
                 type="subject"
                 name="subject"
                 class="textbox"
                 placeholder="Subject of your message..."
+                required
               /><br />
-              <label for="msg" required>Message:</label><br />
+              <label for="msg">Message:</label><br />
               <textarea
                 name="msg"
                 class="textbox"
                 placeholder="Please enter a message..."
+                required
               ></textarea
               ><br />
               <input type="submit" value="Send" />
