--- a/story.html
+++ b/story.html
@@ -62,14 +62,14 @@
             <h1 class="sub-title fade-in">The Ragtag Team</h1>
             <article class="block-fade-in">
               <p class="fade-in">
-                Error debitis sapiente quo vel maxime fugit accusantium
-                possimus. Esse perspiciatis aut est rem et dolorem perferendis.
-                Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
-                Consectetur qui at numquam. Et id quia odit enim a. Vitae
-                temporibus minus amet enim. Enim nulla magni non reiciendis.
-                Facere quis omnis illo vel. Eum molestiae est beatae dolores
-                quod corrupti. Quisquam voluptatibus aut magni omnis
-                necessitatibus ea eum id.
+                Toxic was established in the summer of 2016 by our founder Svet.
+                Him, along with Kris, Vasko, Niki, Miro, Ivo, and Kiro teamed up
+                to try out for a spot at the asian pop culture event 'Aniventure
+                2016's k-pop dance cover panel panel. The 7 started off as just
+                a bunch of buddies looking for a hobby and they could have never
+                known what the future held. We were the first all male k-pop
+                cover dance group in Bulgaria and we remain the only one to this
+                day.
               </p>
               <div class="video-wrapper fade-in">
                 <video id="video" width="720" height="720" autoplay muted loop>
@@ -94,14 +94,13 @@
             <h1 class="sub-title fade-in">Learning Curve</h1>
             <article class="block-fade-in">
               <p class="fade-in">
-                Error debitis sapiente quo vel maxime fugit accusantium
-                possimus. Esse perspiciatis aut est rem et dolorem perferendis.
-                Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
-                Consectetur qui at numquam. Et id quia odit enim a. Vitae
-                temporibus minus amet enim. Enim nulla magni non reiciendis.
-                Facere quis omnis illo vel. Eum molestiae est beatae dolores
-                quod corrupti. Quisquam voluptatibus aut magni omnis
-                necessitatibus ea eum id.
+                Our debut performance was less than spectacular to say the
+                least. But we held on and kept on going until eventually
+                something started clicking. We developed synergy and
+                synchronicity over our next few performances. With our new
+                member Dan, we headed back to the stage for a charity concert a
+                few months after our debut, and we felt driven to make something
+                from this.
               </p>
 
               <div class="video-wrapper fade-in">
@@ -127,14 +126,15 @@
             <h1 class="sub-title fade-in">Competition</h1>
             <article class="block-fade-in">
               <p class="fade-in">
-                Error debitis sapiente quo vel maxime fugit accusantium
-                possimus. Esse perspiciatis aut est rem et dolorem perferendis.
-                Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
-                Consectetur qui at numquam. Et id quia odit enim a. Vitae
-                temporibus minus amet enim. Enim nulla magni non reiciendis.
-                Facere quis omnis illo vel. Eum molestiae est beatae dolores
-                quod corrupti. Quisquam voluptatibus aut magni omnis
-                necessitatibus ea eum id.
+                The culmination of our efforts in our first year together was us
+                finally competiting on stage. We went up against the best k-pop
+                dancers in Bulgaria at the 'K-Pop World Festival: Sofia'. We
+                wanted to prove to ourselves and the rest of the community that
+                the all-male group is not just a gimmick and we showed them our
+                best with our performance of 'Infinite - The Eye'. We took home
+                third place, a result with which we were extremely happy with.
+                It served only to increase our drive for performance and
+                competition in the future.
               </p>
 
               <div class="video-wrapper fade-in">
@@ -160,14 +160,12 @@
             <h1 class="sub-title fade-in">Ambition</h1>
             <article class="block-fade-in">
               <p class="fade-in">
-                Error debitis sapiente quo vel maxime fugit accusantium
-                possimus. Esse perspiciatis aut est rem et dolorem perferendis.
-                Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
-                Consectetur qui at numquam. Et id quia odit enim a. Vitae
-                temporibus minus amet enim. Enim nulla magni non reiciendis.
-                Facere quis omnis illo vel. Eum molestiae est beatae dolores
-                quod corrupti. Quisquam voluptatibus aut magni omnis
-                necessitatibus ea eum id.
+                As our vigor and drive crept up, so did our desire to do
+                something big. What better way to impress than return to the
+                stage it all started on? Armed with our new member Kircho, we
+                headed out for our most ambitious performance yet, on the
+                biggest stage. It was time for 'Aniventure 2017', and our 9-man
+                performance of 'SF9 - K.O.'.
               </p>
 
               <div class="video-wrapper fade-in">
@@ -193,14 +191,21 @@
             <h1 class="sub-title fade-in">Success</h1>
             <article class="block-fade-in">
               <p class="fade-in">
-                Error debitis sapiente quo vel maxime fugit accusantium
-                possimus. Esse perspiciatis aut est rem et dolorem perferendis.
-                Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
-                Consectetur qui at numquam. Et id quia odit enim a. Vitae
-                temporibus minus amet enim. Enim nulla magni non reiciendis.
-                Facere quis omnis illo vel. Eum molestiae est beatae dolores
-                quod corrupti. Quisquam voluptatibus aut magni omnis
-                necessitatibus ea eum id.
+                Fast forward to the next year. We return as five members to
+                'K-Pop World Festival: Sofia' in 2018 armed with two years of
+                experience, three months of practice, and determination to win.
+                A third place finish wouldn't satisfy us anymore. We aimed to
+                win it all. With our most intense choreography yet, 'A.C.E -
+                Callin', we convincingly snatched the gold medal, and the
+                feeling was indescribable. The biggest competition in our field
+                was finally ours.<br />
+                As winners of the regional round of 'K-Pop World Festival', we
+                entered the internal competition. 12 teams from around the world
+                were selected to head out all the way to Changwon, South Korea,
+                train for two weeks, and compete in the Festival's finals. All
+                broadcasted on Korea's national TV, KBS. And we did it once
+                again, being the first Bulgarian group to ever compete in the
+                finals of the festival.
               </p>
 
               <div class="video-wrapper fade-in">
@@ -226,14 +231,11 @@
             <h1 class="sub-title fade-in">Beyond Korea</h1>
             <article class="block-fade-in">
               <p class="fade-in">
-                Error debitis sapiente quo vel maxime fugit accusantium
-                possimus. Esse perspiciatis aut est rem et dolorem perferendis.
-                Nemo enim molestias omnis quo. Et alias non nemo possimus quam.
-                Consectetur qui at numquam. Et id quia odit enim a. Vitae
-                temporibus minus amet enim. Enim nulla magni non reiciendis.
-                Facere quis omnis illo vel. Eum molestiae est beatae dolores
-                quod corrupti. Quisquam voluptatibus aut magni omnis
-                necessitatibus ea eum id.
+                Since our adventure to Korea, we've been hard at work developing
+                ourselves and our craft, and having as much fun as we can doing
+                it. Pandemic times have hit us hard, but with our new addition,
+                Kai, we can't wait to go back on stage. Our story is far from
+                over, and we hope you stay along, and enjoy it with us.
               </p>
 
               <div class="video-wrapper fade-in">
